--- a/packages/frontend/src/global.scss
+++ b/packages/frontend/src/global.scss
@@ -1,9 +1,9 @@
-@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&display=swap&subset=korean');
 
 * {
   user-select: none;
   box-sizing: border-box;
-  font-family: 'Spoqa Han Sans', sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 body {
